Revert "Failed attempt to fix mystery segfault."
This reverts commit d973c1daa308997b51860ce421a5d79ac5e8479b.

--- a/Source/Linux/Makefile
+++ b/Source/Linux/Makefile
@@ -5,10 +5,9 @@ GAMEDATA	:= ${KSPDIR}/GameData
 MSCGAMEDATA := ${GAMEDATA}/${MODNAME}
 PLUGINDIR	:= ${MSCGAMEDATA}/Plugins
 
-CFLAGS = -g -Wall -Werror -fPIC
+CFLAGS = -Wall -Werror -fPIC
 CPPFLAGS = -MMD
-#MCSFLAGS = -optimize -warnaserror -unsafe
-MCSFLAGS = -optimize -warnaserror
+MCSFLAGS = -optimize -warnaserror -unsafe
 
 lib_sources = inputlib.c
 
