Allow device axes and buttons to be named.
Looked up by device name from data in a config node in PluginData (to avoid
issues with Module Manager).

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -12,6 +12,8 @@ MOD_FILES := \
 	Assembly/VersionReport.cs	\
 	Linux/InputLib.cs			\
 	AdvancedInput.cs			\
+	Data.cs						\
+	DeviceNamesContainer.cs		\
 	$e
 
 DOC_FILES := \
