--- a/Data/deviceconfig.cfg
+++ b/Data/deviceconfig.cfg
@@ -1,9 +1,56 @@
 DeviceConfig {
 	name = Saitek Saitek X52 Flight Control System
 	AxisRecipe {
+		index = 0
+		balanced = true
+		inverted = false
+		deadzone = 6
+	}
+	AxisRecipe {
+		index = 1
+		balanced = true
+		inverted = false
+		deadzone = 6
+	}
+	AxisRecipe {
 		index = 2
-		type = Unbalanced
+		balanced = false
 		inverted = true
+	}
+	AxisRecipe {
+		index = 3
+		balanced = true
+		inverted = false
+		deadzone = 6
+	}
+	AxisRecipe {
+		index = 4
+		balanced = true
+		inverted = false
+		deadzone = 6
+	}
+	AxisRecipe {
+		index = 5
+		balanced = true
+		inverted = false
+		deadzone = 6
+	}
+	AxisRecipe {
+		index = 6
+		balanced = false
+		inverted = false
+	}
+	AxisRecipe {
+		index = 9
+		balanced = true
+		inverted = false
+		deadzone = 1
+	}
+	AxisRecipe {
+		index = 10
+		balanced = true
+		inverted = false
+		deadzone = 1
 	}
 	AxisBinding {
 		index = 0
