Update FlightInputHandler's state directly for X, Y, Z.

--- a/Data/deviceconfig.cfg
+++ b/Data/deviceconfig.cfg
@@ -92,4 +92,28 @@ DeviceConfig {
 		index = 30
 		binding = MainThrottleLock
 	}
+	ButtonBinding {
+		index = 15
+		binding = TranslateDown
+	}
+	ButtonBinding {
+		index = 16
+		binding = TranslateRight
+	}
+	ButtonBinding {
+		index = 17
+		binding = TranslateUp
+	}
+	ButtonBinding {
+		index = 18
+		binding = TranslateLeft
+	}
+	ButtonBinding {
+		index = 19
+		binding = TranslateBack
+	}
+	ButtonBinding {
+		index = 21
+		binding = TranslateForward
+	}
 }
