Implement action group bindings.

--- a/Data/deviceconfig.cfg
+++ b/Data/deviceconfig.cfg
@@ -74,19 +74,22 @@ DeviceConfig {
 	}
 	ButtonBinding {
 		index = 1
-		binding = TriggerStage
+		binding = Stage
 	}
 	ButtonBinding {
 		index = 4
-		binding = ToggleLights
+		binding = Lights
+		mode = toggle
 	}
 	ButtonBinding {
 		index = 6
 		binding = Brakes
+		mode = hold
 	}
 	ButtonBinding {
 		index = 7
-		binding = ToggleGear
+		binding = Gear
+		mode = toggle
 	}
 	ButtonBinding {
 		index = 30
