Add a binding for SAS.

--- a/Data/deviceconfig.cfg
+++ b/Data/deviceconfig.cfg
@@ -82,6 +82,11 @@ DeviceConfig {
 		mode = toggle
 	}
 	ButtonBinding {
+		index = 5
+		binding = SAS
+		mode = edgetoggle
+	}
+	ButtonBinding {
 		index = 6
 		binding = Brakes
 		mode = hold
