Add configs for my xbox controller.
Horrid deazones, and not sure about a good setup for it, but at least the
inputs are named.

--- a/Data/deviceconfig.cfg
+++ b/Data/deviceconfig.cfg
@@ -126,3 +126,53 @@ DeviceConfig {
 		binding = TranslateForward
 	}
 }
+DeviceConfig {
+	name = Xbox 360 Wireless Receiver
+	AxisRecipe {
+		index = 0
+		balanced = true
+		inverted = false
+		deadzone = 4096
+	}
+	AxisRecipe {
+		index = 1
+		balanced = true
+		inverted = false
+		deadzone = 4096
+	}
+	AxisRecipe {
+		index = 2
+		balanced = false
+		inverted = false
+	}
+	AxisRecipe {
+		index = 3
+		balanced = true
+		inverted = false
+		deadzone = 4096
+	}
+	AxisRecipe {
+		index = 4
+		balanced = true
+		inverted = false
+		deadzone = 4096
+	}
+	AxisRecipe {
+		index = 5
+		balanced = false
+		inverted = false
+	}
+
+	AxisBinding {
+		index = 0
+		binding = Yaw
+	}
+	AxisBinding {
+		index = 3
+		binding = Roll
+	}
+	AxisBinding {
+		index = 4
+		binding = Pitch
+	}
+}
