--- a/Data/deviceconfig.cfg
+++ b/Data/deviceconfig.cfg
@@ -176,3 +176,125 @@ DeviceConfig {
 		binding = Pitch
 	}
 }
+DeviceConfig {
+	name = Thrustmaster TWCS Throttle
+	AxisRecipe {
+		index = 0
+		balanced = true
+		inverted = false
+		deadzone = 4
+	}
+	AxisRecipe {
+		index = 1
+		balanced = true
+		inverted = false
+		deadzone = 4
+	}
+	AxisRecipe {
+		index = 2
+		balanced = false
+		inverted = true
+	}
+	AxisRecipe {
+		index = 3
+		balanced = false
+		inverted = true
+		deadzone = 0
+	}
+	AxisRecipe {
+		index = 4
+		balanced = false
+		inverted = true
+		deadzone = 0
+	}
+	AxisRecipe {
+		index = 5
+		balanced = true
+		inverted = false
+		deadzone = 0
+	}
+	AxisRecipe {
+		index = 6
+		balanced = true
+		inverted = false
+		deadzone = 8
+	}
+	AxisRecipe {
+		index = 7
+		balanced = false
+		inverted = false
+		deadzone = 0
+	}
+	AxisRecipe {
+		index = 8
+		balanced = true
+		inverted = false
+		deadzone = 0
+	}
+	AxisRecipe {
+		index = 9
+		balanced = true
+		inverted = false
+		deadzone = 0
+	}
+	AxisBinding {
+		index = 2
+		binding = MainThrottle
+	}
+	AxisBinding {
+		index = 6
+		binding = Yaw
+	}
+	AxisBinding {
+		index = 6
+		binding = WheelSteer
+		invert = true
+	}
+}
+DeviceConfig {
+	name = Thrustmaster T.16000M
+	AxisRecipe {
+		index = 0
+		balanced = true
+		inverted = false
+		deadzone = 64
+	}
+	AxisRecipe {
+		index = 1
+		balanced = true
+		inverted = false
+		deadzone = 64
+	}
+	AxisRecipe {
+		index = 2
+		balanced = true
+		inverted = false
+		deadzone = 0
+	}
+	AxisRecipe {
+		index = 3
+		balanced = false
+		inverted = true
+		deadzone = 0
+	}
+	AxisRecipe {
+		index = 4
+		balanced = true
+		inverted = false
+		deadzone = 0
+	}
+	AxisRecipe {
+		index = 5
+		balanced = true
+		inverted = false
+		deadzone = 0
+	}
+	AxisBinding {
+		index = 0
+		binding = Roll
+	}
+	AxisBinding {
+		index = 1
+		binding = Pitch
+	}
+}
