Add a linear brake binding.
Very nice for use with [rudder] pedals. An axis can be bound to left, right
or "central" (meaning all brakes).

--- a/Data/deviceconfig.cfg
+++ b/Data/deviceconfig.cfg
@@ -237,18 +237,24 @@ DeviceConfig {
 		inverted = false
 		deadzone = 0
 	}
+
 	AxisBinding {
 		index = 2
 		binding = MainThrottle
 	}
 	AxisBinding {
-		index = 6
-		binding = Yaw
+		index = 3
+		binding = LinearBrake
+		side = right
+	}
+	AxisBinding {
+		index = 4
+		binding = LinearBrake
+		side = left
 	}
 	AxisBinding {
 		index = 6
-		binding = WheelSteer
-		invert = true
+		binding = Yaw
 	}
 }
 DeviceConfig {
@@ -296,5 +302,10 @@ DeviceConfig {
 	AxisBinding {
 		index = 1
 		binding = Pitch
+	}
+	AxisBinding {
+		index = 2
+		binding = WheelSteer
+		invert = true
 	}
 }
