Add "maxzone" to axis recipes.
maxzone is effectively deadzone for the extremes of the input rather than
near 0. Defaults to 0. Can be used to ensure maximum output when the inputs
don't always hit their limits (my thrustmaster throttle is a bit iffy at
the ends).

--- a/Data/deviceconfig.cfg
+++ b/Data/deviceconfig.cfg
@@ -194,6 +194,8 @@ DeviceConfig {
 		index = 2
 		balanced = false
 		inverted = true
+		deadzone = 200
+		maxzone = 200
 	}
 	AxisRecipe {
 		index = 3
