Implement binding sets.
Binding sets allow for multiple, switchable binding configurations. Each
set has not only its own axis and button bindings, but also its own axis
recipes. Switching is not yet implemented, and the axis monitor is broken.

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -47,6 +47,7 @@ MOD_FILES := \
 	AxisBinding.cs				\
 	AxisMonitor.cs				\
 	AxisRecipe.cs				\
+	BindingSet.cs				\
 	ButtonBinding.cs			\
 	Data.cs						\
 	Device.cs					\
