Add support for custom action groups.
Currently idenfifed numerically (so 128 for 1, 256 for 2, etc), but this
should support extended action groups.

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -30,6 +30,7 @@ MOD_FILES := \
 	ButtonBindings/ActionGroup.cs	\
 	ButtonBindings/Brake.cs	\
 	ButtonBindings/ButtonMode.cs	\
+	ButtonBindings/CustomAction.cs	\
 	ButtonBindings/Gear.cs	\
 	ButtonBindings/Lights.cs	\
 	ButtonBindings/MainThrottleLock.cs	\
