More tweaks to my current config.

--- a/Data/deviceconfig.cfg
+++ b/Data/deviceconfig.cfg
@@ -182,13 +182,13 @@ DeviceConfig {
 		index = 0
 		balanced = true
 		inverted = false
-		deadzone = 4
+		deadzone = 24
 	}
 	AxisRecipe {
 		index = 1
 		balanced = true
 		inverted = false
-		deadzone = 4
+		deadzone = 24
 	}
 	AxisRecipe {
 		index = 2
@@ -241,6 +241,10 @@ DeviceConfig {
 	}
 
 	AxisBinding {
+		index = 1
+		binding = WheelThrottle
+	}
+	AxisBinding {
 		index = 2
 		binding = MainThrottle
 	}
@@ -257,6 +261,29 @@ DeviceConfig {
 	AxisBinding {
 		index = 6
 		binding = Yaw
+	}
+
+	ButtonBinding {
+		index = 0
+		binding = Brakes
+		mode = toggle
+	}
+	ButtonBinding {
+		index = 3
+		binding = CustomAction
+		id = 128
+		mode = trigger
+	}
+	ButtonBinding {
+		index = 4
+		binding = CustomAction
+		id = 256
+		mode = trigger
+	}
+	ButtonBinding {
+		index = 5
+		binding = Gear
+		mode = toggle
 	}
 }
 DeviceConfig {
