Update build for KSP 1.8

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -98,7 +98,7 @@ bin/${MODNAME}.dll: ${MOD_FILES}
 	@mkdir -p bin
 	${GMCS} ${GMCSFLAGS} -t:library -lib:${MANAGED} \
 		-r:Assembly-CSharp,Assembly-CSharp-firstpass \
-		-r:UnityEngine,UnityEngine.UI \
+		-r:UnityEngine,UnityEngine.UI,UnityEngine.IMGUIModule,UnityEngine.CoreModule,UnityEngine.TextRenderingModule,UnityEngine.InputLegacyModule,UnityEngine.AnimationModule \
 		-out:$@ $^
 
 clean:
