Update TM throttle setting
With the change to using KSP's raw input, the main throttle is now -1..1
for 0..100% (KSP itself always was, but by the time FBW modules saw the
throttle, it was 0..1).

--- a/Data/deviceconfig.cfg
+++ b/Data/deviceconfig.cfg
@@ -192,7 +192,7 @@ DeviceConfig {
 	}
 	AxisRecipe {
 		index = 2
-		balanced = false
+		balanced = true
 		inverted = true
 		deadzone = 256
 		maxzone = 256
