--- a/Assets/Makefile
+++ b/Assets/Makefile
@@ -32,11 +32,14 @@ info:
 icon_button.png: icon_button.svg
 	inkscape --export-width=24 --export-height=24 --export-background='#000000' --export-background-opacity=0 --export-png=$@ $^
 
+HARMONY := 0Harmony.1.2.0.1.dll
+
 clean:
 	rm -f icon_button.png
 
 install: all
 	mkdir -p ${MODGAMEDATA}/Textures
 	cp icon_button.png ${MODGAMEDATA}/Textures
+	cp ${HARMONY} ${PLUGINDIR}
 
 .PHONY: all clean install
