Support binding EVA controls

--- a/Data/deviceconfig.cfg
+++ b/Data/deviceconfig.cfg
@@ -241,6 +241,19 @@ DeviceConfig {
 	}
 
 	AxisBinding {
+		index = 0
+		binding = EVAX
+	}
+	AxisBinding {
+		index = 1
+		binding = EVAZ
+	}
+	AxisBinding {
+		index = 5
+		binding = EVAY
+	}
+
+	AxisBinding {
 		index = 1
 		binding = WheelThrottle
 	}
@@ -267,6 +280,11 @@ DeviceConfig {
 		index = 0
 		binding = Brakes
 		mode = toggle
+	}
+	ButtonBinding {
+		index = 1
+		binding = EVAAngularBrake
+		mode = hold
 	}
 	ButtonBinding {
 		index = 3
@@ -337,5 +355,26 @@ DeviceConfig {
 		binding = WheelSteer
 		invert = true
 		curve = 2
+	}
+
+	AxisBinding {
+		index = 0
+		binding = EVAParachuteRoll
+	}
+	AxisBinding {
+		index = 1
+		binding = EVAParachutePitch
+	}
+	AxisBinding {
+		index = 0
+		binding = EVARoll
+	}
+	AxisBinding {
+		index = 1
+		binding = EVAPitch
+	}
+	AxisBinding {
+		index = 2
+		binding = EVAYaw
 	}
 }
