[InputLib] Bring in updates from recent QuakeForge
Probably the most important enhancement is better string safety with
device names, thanks to Brian's dstring "class". He wrote it long ago
for QF and it has proved invaluable in safely handling strings in C.

Less critical, but still juicy: this adds physical path and unique name
support (when available: most devices don't provide it, but Sony PS4
controller's *do*), axis and button events, and working relative axis
(3d mouse) handling.

--- a/Source/Linux/Makefile
+++ b/Source/Linux/Makefile
@@ -9,7 +9,7 @@ CFLAGS = -Wall -Werror -fPIC -g
 CPPFLAGS = -MMD
 MCSFLAGS = -optimize -warnaserror -unsafe
 
-lib_sources = inputlib.c hotplug.c
+lib_sources = dstring.c inputlib.c hotplug.c
 
 lib_objects = $(patsubst %.c, %.o, $(lib_sources))
 
