[UI] Get a settings window title bar showing
The main thing is adding the assets needed for the new UI, the settings
window title bar is just showing that the basics are working.

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -54,6 +54,7 @@ MOD_FILES := \
 	ButtonBindings/TranslateUp.cs	\
 	ButtonBindings/WheelThrottleLock.cs	\
 	Linux/InputLib.cs			\
+	UI/SettingsWindow.cs		\
 	AdvancedInput.cs			\
 	AxisBinding.cs				\
 	AxisRecipe.cs				\
