[UI] Add a device manager view to the settings window
Currently, it only shows shows the connected devices (with hot-plug!).

Also, the settings can be reloaded.

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -54,7 +54,11 @@ MOD_FILES := \
 	ButtonBindings/TranslateUp.cs	\
 	ButtonBindings/WheelThrottleLock.cs	\
 	Linux/InputLib.cs			\
+	UI/DeviceInfo.cs			\
+	UI/DeviceInfoView.cs		\
+	UI/DeviceManagerView.cs		\
 	UI/SettingsWindow.cs		\
+	UI/WindowManager.cs			\
 	AdvancedInput.cs			\
 	AxisBinding.cs				\
 	AxisRecipe.cs				\
