[UI] Flesh out device info a little
It shows the unique id if it's available, otherwise the usb path, and an
activity indicator to make it easier to identify devices (handy for when
two or more of the same make are connected).

--- a/Assets/DefaultSkin.cfg
+++ b/Assets/DefaultSkin.cfg
@@ -153,6 +153,11 @@ KodeUI_Skin {
 	}
 
 	Style {
+		name = AIDeviceInfoView
+		sprite = AI.Default.background
+		color = 0.25, 0.25, 0.25, 1
+	}
+	Style {
 		name = AISettingsWindow
 		sprite = AI.Default.background
 		color = 0.25, 0.25, 0.25, 1
