[UI] Show selected device axes and buttons
The auto-layout is a bit off, but the display is useful for checking
which physical axis or button is which, and while the update needs a
kick, config reload works nicely for updating names.

--- a/Assets/DefaultSkin.cfg
+++ b/Assets/DefaultSkin.cfg
@@ -229,24 +229,24 @@ KodeUI_Skin {
 		color = 0.25, 1, 0.25, 1
 	}
 	Style {
-		name = ResourceFraction
+		name = AxisFraction
 		stateColors {
 			normalColor = 1, 1, 1, 0.8
 			colorMultiplier = 1.25
 		}
 	}
 	Style {
-		name = ResourceFraction.Background
+		name = AxisFraction.Background
 		sprite = AI.Default.background
 		color = 1, 0.890196078, 0.329411765, 1
 	}
 	Style {
-		name = ResourceFraction.Fill
+		name = AxisFraction.Fill
 		sprite = AI.Default.background
 		color = 0, 1, 0.0470588235, 1
 	}
 	Style {
-		name = ResourceFraction.Handle
+		name = AxisFraction.Handle
 		sprite = AI.Default.checkmark
 		color = 1, 1, 1, 1
 	}
